deploy/k8s/vexination/api/030-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vexination-api
  labels:
    app.kubernetes.io/name: vexination-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: vexination
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: vexination-api
      app.kubernetes.io/component: api
      app.kubernetes.io/part-of: vexination
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vexination-api
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: vexination
    spec:
      volumes:
        - name: data
          emptyDir: {}
      containers:
        - image: ghcr.io/trustification/trust:latest
          imagePullPolicy: Always
          name: service
          command: ["/trust"]
          args: ["vexination", "api", "-p", "8080"]
          volumeMounts:
            - name: data
              mountPath: /data
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9010
            initialDelaySeconds: 2
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9010
            initialDelaySeconds: 2
          startupProbe:
            httpGet:
              path: /health/startup
              port: 9010
