deploy/k8s/vexination/api/040-Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: vexination-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: vexination
  name: vexination-api
spec:
  ports:
  - name: endpoint
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: vexination-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: vexination
  type: ClusterIP
