deploy/k8s/vexination/api/051-Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: vexination-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: vexination
  name: vexination-api-vanity
spec:
  host: vex.trustification.dev
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: endpoint
  to:
    kind: Service
    name: vexination-api
    weight: 100
  wildcardPolicy: None
